2010-06-04  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in: Bump to 1.142.0

2010-06-02  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_profile_panel.c (nwamui_ncp_name_cell_edited),
	(on_button_clicked): Fixed can't update widgets in cloning NCP.
	* common/nwamui_daemon.c (nwamui_object_real_reload),
	(nwam_known_wlan_walker_cb): Clean code.
	* common/nwamui_env.c (nwamui_object_real_clone),
	(nwamui_object_real_reload): Clean code.
	* common/nwamui_known_wlan.c (nwamui_object_real_commit):
	* common/nwamui_ncu.c (nwamui_ncu_add_acquired):
	* common/nwamui_ncu.h:
	* common/nwamui_object.c (default_nwamui_object_set_nwam_state):
	Clean code.
	* daemon/status_icon.c (ncu_notify_nwam_state),
	(connect_nwam_object_signals): Fixed show NCU connected
	notification on disconnecting.

2010-05-28  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c
	(capplet_tree_model_foreach_nwamui_object_reload),
	(capplet_tree_model_foreach_nwamui_object_commit):
	* capplet/capplet-utils.h: Common reload/commit useful for tree
	view. Note current not all the nwamui object subclass implemented
	_has_modifications, _validate, _reload and _commit.
	* capplet/nwam_conn_conf_ip_panel.c (nwam_conf_ip_panel_init),
	(apply), (daemon_add_object), (daemon_remove_object),
	(wireless_tab_add_button_clicked_cb),
	(wireless_tab_remove_button_clicked_cb),
	(wireless_tab_edit_button_clicked_cb): Monitor daemon_add/remove
	events, make sure an object is successfully committed also be
	added in order to reuse the object and refect the info on the GUI.
	* capplet/nwam_env_pref_dialog.c (apply): Use common object
	_validate function.
	* capplet/nwam_location_dialog.c (cancel), (apply),
	(on_button_clicked): Clean code, use common tree view commit
	function.
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_init), (apply),
	(show_changed_cb), (daemon_add_object), (daemon_remove_object):
	Monitor daemon_add/remove events instead of daemon_info event
	which has been deleted.